# svgpr-regression

./: .gitignore  LICENSE  README.md  pyproject.toml
svgpr/: __init__.py  regressor.py
svgpr/config/: __init__.py  settings.py
svgpr/likelihoods/: __init__.py  vector_noise.py
svgpr/models/: __init__.py  latent.py  noise.py
svgpr/utils/: __init__.py  preprocessing.py
